# Machine-Learning-for-Algorithmic-Trading-Second-Edition

./: .gitignore  main.py  pyproject.toml  simple_momentum.py
04_alpha_factor_research/: 01_feature_engineering.ipynb  02_how_to_use_talib.ipynb  04_single_factor_zipline.ipynb
05_strategy_evaluation/: 01_backtest_with_trades.ipynb  02_backtest_with_pf_optimization.ipynb  03_pyfolio_demo.ipynb  04_mean_variance_optimization.ipynb  05_kelly_rule.ipynb
06_machine_learning_process/: 01_machine_learning_workflow.ipynb  02_mutual_information.ipynb  03_bias_variance.ipynb
07_linear_models/: 01_linear_regression_intro.ipynb  02_fama_macbeth.ipynb  03_preparing_the_model_data.ipynb  04_statistical_inference_of_stock_returns_with_statsmodels.ipynb  05_predicting_stock_returns_with_linear_regression.ipynb  06_evaluating_signals_using_alphalens.ipynb  07_logistic_regression_macro_data.ipynb  08_predicting_price_movements_with_logistic_regression.ipynb
08_ml4t_workflow/: 02_vectorized_backtest.ipynb  03_backtesting_with_backtrader.ipynb  bt_log.csv
09_time_series_models/: 01_tsa_and_stationarity.ipynb  03_arch_garch_models.ipynb  04_vector_autoregressive_model.ipynb  05_cointegration_tests.ipynb  06_statistical_arbitrage_with_cointegrated_pairs.ipynb  07_pairs_trading_backtest.ipynb
10_bayesian_machine_learning/: 01_updating_conjugate_priors.ipynb
11_decision_trees_random_forests/: 00_data_prep.ipynb  01_decision_trees.ipynb  02_bagged_decision_trees.ipynb  03_random_forest_tuning.ipynb  04_japanese_equity_features.ipynb  05_random_forest_return_signals edited.ipynb  (+2 more)
(+24 files in other folders)
